プロジェクト名、変更しました。

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tougenotizu</name>
+	<name>tougetizu_kantouVer</name>
 	<comment></comment>
 	<projects>
 	</projects>
